Update login page, WebKit styling, and change navigation to dashboard after note creation

--- a/src/components/CreateNote/index.css
+++ b/src/components/CreateNote/index.css
@@ -113,6 +113,11 @@
 }
 
 @media (max-width:748px){
+    .create-note-bg{
+       width: 100vw;
+       min-height: 100vh;
+    }
+
     .back-button-container{
         background-color: #121212;
         padding-bottom:20px ;
