--- a/src/components/EditNote/index.css
+++ b/src/components/EditNote/index.css
@@ -140,6 +140,11 @@
 
 
 @media (max-width:748px) {
+    .editnote-bg{
+        width: 100vw;
+        min-height: 100vh;
+    }
+
     .button-group{
         background-color: #121212;
         padding-bottom: 10px;
